fixing up spacing in green section

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -90,12 +90,11 @@ p {
     position: relative;
     background-color: #0E9474;
     font-family: 'Raleway', sans-serif;
-    height: 700px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0 10%;
+    padding: 10vh;
 }
 
 #green-section p {
